[package]
name = "data_bases"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }

# Database Drivers
surrealdb = "2.0"
mongodb = "3.0"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid"] }
futures = "0.3"

# Embedded Key-Value Stores
rocksdb = "0.24.0"
rusty-leveldb = "3.0"
bytes = "1"