[package]
name = "data_bases"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }

# Database Drivers
surrealdb = "2.0"
mongodb = "3.0"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid"] }
futures = "0.3"

# Embedded Key-Value Stores
rocksdb = { version = "0.24.0", default-features = false, features = ["lz4"] }
leveldb = "0.8.6"
db-key = "0.0.5"
bytes = "1"